2001-11-07  jacob berkman  <jacob@ximian.com>

	* glade/Makefile.am (glademoduledir): install into our prefix
	rather than libglade's

	* configure.in: remove glade module dir check

2001-11-07  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-control-frame.c
	(bonobo_control_frame_set_remote_window): add disgusting
	hacks around GtkPlug brokenness in the in-proc case.

	* bonobo/bonobo-widget.c
	(bonobo_widget_construct_control_from_objref): remove
	sinking feeling.

	* bonobo/bonobo-control-frame.c
	(bonobo_control_frame_set_remote_window): an ugly,
	ugly hack to make the control play ball in-proc.

	* bonobo/bonobo-plug.c (bonobo_plug_realize): impl.
	(bonobo_plug_class_init): hook.

	* tests/control/test-control.c (create_frame):
	remove bogus remote faking, we need to fool Gdk too.

2001-11-07  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-component.c (impl_get_prop): make the
	check faster.

	* tests/test-ui.c (main): update test.

	* bonobo/bonobo-ui-container.c
	(impl_Bonobo_UIContainer_getAttr): check it & fire the
	right exceptions.

	* bonobo/bonobo-ui-engine.c
	(bonobo_ui_engine_xml_get_prop): add invalid_path arg.

	* bonobo/bonobo-ui-xml.c (bonobo_ui_xml_finalize):
	chain to parent properly & upd.
	(bonobo_ui_xml_dispose): impl.
	(bonobo_ui_xml_class_init): hook.

	* bonobo/bonobo-ui-preferences.c
	(DEFINE_BONOBO_UI_PREFERENCE): cache the value localy.

	* bonobo/Makefile.am: don't build / install bonobo-wrapper.h

	* bonobo/bonobo-widget.c (bonobo_widget_class_init): upd.
	(bonobo_widget_remove): impl.

2001-11-05  Mark McLoughlin  <mark@skynet.ie>

	* bonobo/bonobo-ui-toolbar.c: (size_allocate_helper):
	don't assume we have to be the last widget on the list to
	be the last visible widget.

	* bonobo/bonobo-ui-toolbar-popup-item.c: (impl_set_orientation):
	don't unref pixbuf.

2001-11-06  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-zoomable.c 
	(impl_Bonobo_Zoomable__get_preferredLevels): use a memcpy