@@ -1,3 +1,14 @@
+2001-11-08  Michael Meeks  <michael@ximian.com>
+
+	* bonobo/bonobo-ui-container.c
+	(impl_Bonobo_UIContainer_setNode): upd. spelling for Darin.
+	(impl_Bonobo_UIContainer_getAttr): upd.
+
+	* bonobo/bonobo-ui-component.c (impl_get_prop): ditto.
+
+	* bonobo/bonobo-plug.c (bonobo_plug_destroy_event): rename
+	(bonobo_plug_delete_event): to this.
+
 2001-11-07  jacob berkman  <jacob@ximian.com>
 
 	* glade/Makefile.am (glademoduledir): install into our prefix
